LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Relationship_Team__c/Client_Contact_Relationship_Team__c.object-meta.xml
<CustomObject>
    <label>Client Contact Relationship Team</label>
    <nameField>
        <displayFormat>CCRT-{0000}</displayFormat>
        <label>Client Contact Relationship Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Contact Relationship Team</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>