LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Relationship_Team__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <description>This field contains access level of Client Contact.</description>
    <label>Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Read/Write</fullName>
            </value>
            <value>
                <fullName>Inherited by Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>