LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Relationship_Team__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <formula>CASESAFEID(Client_Contact__r.AccountId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Id</label>
    <type>Text</type>
</CustomField>