LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Relationship_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>This field contains the role of Client Contact Relationship Team member.</description>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Creator</fullName>
            </value>
            <value>
                <fullName>Key Account – CSL</fullName>
            </value>
            <value>
                <fullName>Key Account – Co-CSL</fullName>
            </value>
            <value>
                <fullName>NSL</fullName>
                <label>Industry Leader</label>
            </value>
            <value>
                <fullName>Young CSL</fullName>
            </value>
            <value>
                <fullName>Segment Leader</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Campaign Manager</fullName>
                <isActive>false</isActive>
                <label>Campaign Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>