LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Relationship_Team__c/validationRules/Mandate_User.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_User</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( User__c )</errorConditionFormula>
    <errorDisplayField>User__c</errorDisplayField>
    <errorMessage>Please provide value for User.</errorMessage>
</ValidationRule>