LinKreta_POC_Repository/force-app/main/default/objects/Client_Contact_Relationship_Team__c/validationRules/Restrict_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      NOT( ISNEW() ),
      NOT(System_Deletion__c),
      NOT(ISCHANGED(System_Deletion__c)), 
      OR(
         ISPICKVAL(Role__c , &apos;Record Creator&apos;),
         ISPICKVAL(Role__c , &apos;Key Account – CSL&apos;),
         ISPICKVAL(Role__c , &apos;Key Account – Co-CSL&apos;),
         ISPICKVAL(Role__c , &apos;Segment Leader&apos;)
      )
      
)</errorConditionFormula>
    <errorMessage>You are not authorized to do changes in &quot;Key Account CSL&quot;, &quot;Key Account Co-CSL&quot;, &quot;Record Creator&quot; and &quot;Segment Leader&quot;.</errorMessage>
</ValidationRule>